ollama server updated

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,4 +1,5 @@
 ENVIRONMENT = 'development'
+OLLAMA_URL="https://divine-promoted-ape.ngrok-free.app/"
 GOOGLE_GENERATIVE_LANGUAGE_API_KEY="Your Google AI Api Key"
 QDRANT_API_KEY="Your Qdrant Api Key"
 QDRANT_CLUSTER_URL="Your Qdrant Cloud Cluster URL"
