--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,9 +4,11 @@ aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.4.0
 attrs==23.2.0
+beautifulsoup4==4.12.3
 blinker==1.8.2
 cachetools==5.3.3
 certifi==2024.7.4
+chardet==4.0.0
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
@@ -16,10 +18,7 @@ dataclasses-json==0.6.7
 distro==1.9.0
 dnspython==2.6.1
 docstring_parser==0.16
-elevenlabs==1.5.0
 email_validator==2.2.0
-fastapi==0.111.1
-fastapi-cli==0.0.4
 ffmpy==0.3.2
 filelock==3.15.4
 Flask==3.0.3
@@ -43,7 +42,6 @@ googleapis-common-protos==1.65.0
 gradio==4.39.0
 gradio_client==1.1.1
 greenlet==3.0.3
-groq==0.10.0
 grpc-google-iam-v1==0.13.1
 grpcio==1.65.1
 grpcio-status==1.62.3
@@ -57,10 +55,11 @@ httptools==0.6.1
 httpx==0.27.0
 huggingface-hub==0.24.1
 hyperframe==6.0.1
-idna==3.7
+idna==2.10
 importlib_resources==6.4.0
 itsdangerous==2.2.0
 Jinja2==3.1.4
+joblib==1.4.2
 jsonpatch==1.33
 jsonpointer==3.0.0
 kiwisolver==1.4.5
@@ -76,12 +75,16 @@ langchain-text-splitters==0.2.2
 langchainhub==0.1.20
 langsmith==0.1.142
 markdown-it-py==3.0.0
+markdownify==0.14.1
 MarkupSafe==2.1.5
 marshmallow==3.22.0
 matplotlib==3.8.4
 mdurl==0.1.2
+mpmath==1.3.0
 multidict==6.0.5
 mypy-extensions==1.0.0
+networkx==3.4.2
+ngrok-api==0.13.0
 numpy==1.26.4
 ollama==0.3.1
 orjson==3.10.6
@@ -108,29 +111,40 @@ pytz==2024.1
 pywin32==306
 PyYAML==6.0.1
 qdrant-client==1.10.1
-requests==2.32.3
+regex==2024.11.6
+requests==2.25.1
 requests-toolbelt==1.0.0
 rich==13.7.1
 rsa==4.9
 ruff==0.5.4
+safetensors==0.4.5
+scikit-learn==1.5.2
+scipy==1.14.1
 semantic-version==2.10.0
+sentence-transformers==3.3.1
 shapely==2.0.5
 shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
+soupsieve==2.6
 SpeechRecognition==3.10.4
 SQLAlchemy==2.0.31
 starlette==0.37.2
+sympy==1.13.1
 tenacity==8.5.0
+threadpoolctl==3.5.0
+tokenizers==0.20.3
 tomlkit==0.12.0
+torch==2.5.1
 tqdm==4.66.4
+transformers==4.46.3
 typer==0.12.3
 types-requests==2.32.0.20240712
 typing-inspect==0.9.0
 typing_extensions==4.12.2
 tzdata==2024.1
 uritemplate==4.1.1
-urllib3==2.2.2
+urllib3==1.26.20
 uvicorn==0.30.3
 watchfiles==0.22.0
 websockets==11.0.3
