docker compose without ollama as a service

--- a/docker-compose-w-ollama.yaml
+++ b/docker-compose-w-ollama.yaml
@@ -7,6 +7,29 @@ services:
     volumes:
       - mongo-data:/data/db
     container_name: RetailARVA.Mongo
+  ollama:
+    build:
+      context: ./ollama
+      dockerfile: Dockerfile
+    expose:
+      - 11434
+    ports:
+      - "11434:11434"
+    runtime: nvidia
+    environment:
+      - NIVIDIA_VISIBLE_DEVICES=all
+      - NVIDIA_DRIVER_CAPABILITIES=compute,utility
+    volumes:
+      - ollama-data:/root/.ollama
+    entrypoint: ["/usr/bin/bash", "pull-models.sh"]
+    container_name: RetailARVA.Ollama
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: all
+              capabilities: [gpu]
   api:
     build:
       context: ./backend
@@ -17,6 +40,7 @@ services:
       - "5000:5000"
     depends_on:
       - mongo
+      - ollama
     environment:
       - FLASK_APP=run.py
       - FLASK_ENV = 'development'
@@ -30,7 +54,7 @@ services:
       - USE_HUGGINGFACE_EMBEDDING=False
       - USE_GOOGLE_EMBEDDING=False
       - USE_OLLAMA_EMBEDDING=True
-      - OLLAMA_URL="http://172.17.0.1:11434"
+      - OLLAMA_URL="http://ollama:11434"
       - OLLAMA_MODEL_ID="llama3.1:latest"
       - OLLAMA_EMBEDDING_MODEL_ID="nomic-embed-text:latest"
       - GEMINI_MODEL_ID="gemini-1.5-flash"
