fix server setup issues

--- a/ollama/Dockerfile
+++ b/ollama/Dockerfile
@@ -6,6 +6,6 @@ WORKDIR $APP_HOME
 
 COPY . .
 
-RUN chmod +x pull-llama3.sh
+RUN chmod +x pull-models.sh
 
 ENTRYPOINT ["/usr/bin/bash", "pull-models.sh"]
