--- a/docker-compose-w-ollama.yaml
+++ b/docker-compose-w-ollama.yaml
@@ -43,11 +43,11 @@ services:
       - ollama
     environment:
       - FLASK_APP=run.py
-      - FLASK_ENV = 'development'
-      - ENVIRONMENT = 'development'
-      - MONGO_HOST = mongo
-      - MONGO_PORT = 27017
-      - MONGO_DBNAME = "retailarvadb"
+      - FLASK_ENV='development'
+      - ENVIRONMENT='development'
+      - MONGO_HOST=mongo
+      - MONGO_PORT=27017
+      - MONGO_DBNAME="retailarvadb"
       - USE_GROQ=False
       - USE_OLLAMA=True
       - USE_GEMINI=False
@@ -84,7 +84,7 @@ services:
     networks: 
       - retailARVA
 volumes:
-  reatilarva-data:
+  retailarva-data:
   mongo-data:
   ollama-data:
 networks:
