--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,11 +19,11 @@ services:
       - mongo
     environment:
       - FLASK_APP=run.py
-      - FLASK_ENV = 'development'
-      - ENVIRONMENT = 'development'
-      - MONGO_HOST = mongo
-      - MONGO_PORT = 27017
-      - MONGO_DBNAME = "retailarvadb"
+      - FLASK_ENV='development'
+      - ENVIRONMENT='development'
+      - MONGO_HOST=mongo
+      - MONGO_PORT=27017
+      - MONGO_DBNAME="retailarvadb"
       - USE_GROQ=False
       - USE_OLLAMA=True
       - USE_GEMINI=False
@@ -60,7 +60,7 @@ services:
     networks: 
       - retailARVA
 volumes:
-  reatilarva-data:
+  retailarva-data:
   mongo-data:
   ollama-data:
 networks:
