add flask-pymongo dependency

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -43,6 +43,7 @@ PyAudio = "0.2.14"
 pydantic = "2.8.2"
 pydantic-settings = "2.3.4"
 pydantic-core = "2.20.1"
+Flask-PyMongo = "3.0.1"
 pymongo = "4.11"
 python-dateutil = "2.9.0.post0"
 python-dotenv = "1.0.1"
