--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,7 +12,7 @@ requires-python = ">=3.11"
 python = "^3.11"
 beautifulsoup4 = "4.12.3"
 colorama = "0.4.6"
-Flask = "3.0.3"
+Flask = {version = "3.0.3", extras = ["async"]} 
 google-generativeai = "0.7.2"
 gradio = "4.39.0"
 huggingface-hub = "0.24.1"
