--- a/docker-compose-w-ollama.yaml
+++ b/docker-compose-w-ollama.yaml
@@ -59,8 +59,8 @@ services:
       - USE_GOOGLE_EMBEDDING=False
       - USE_OLLAMA_EMBEDDING=True
       - OLLAMA_URL=http://ollama:11434
-      - OLLAMA_MODEL_ID=llama3.1:latest
-      - OLLAMA_EMBEDDING_MODEL_ID=nomic-embed-text:latest
+      - OLLAMA_MODEL_ID='llama3.1:latest'
+      - OLLAMA_EMBEDDING_MODEL_ID='nomic-embed-text:latest'
       - GEMINI_MODEL_ID="gemini-1.5-flash"
       - GEMINI_EMBEDDING_MODEL_ID=llama3.1:latest
       - GOOGLE_GENERATIVE_LANGUAGE_API_KEY=AIzaSyDpcYeeReEC_IdaiNRtMJLfqTJpX74ZtLI
