--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -33,8 +33,8 @@ services:
       - USE_GOOGLE_EMBEDDING=False
       - USE_OLLAMA_EMBEDDING=True
       - OLLAMA_URL=http://172.21.174.131:11434
-      - OLLAMA_MODEL_ID=llama3.1:latest
-      - OLLAMA_EMBEDDING_MODEL_ID=nomic-embed-text:latest
+      - OLLAMA_MODEL_ID='llama3.1:latest'
+      - OLLAMA_EMBEDDING_MODEL_ID='nomic-embed-text:latest'
       - GEMINI_MODEL_ID=gemini-1.5-flash
       - GEMINI_EMBEDDING_MODEL_ID=llama3.1:latest
       - GOOGLE_GENERATIVE_LANGUAGE_API_KEY="AIzaSyDpcYeeReEC_IdaiNRtMJLfqTJpX74ZtLI"
