--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -21,8 +21,8 @@ services:
       - mongo
     environment:
       - FLASK_APP=run.py
-      - FLASK_ENV='development'
-      - ENVIRONMENT='development'
+      - FLASK_ENV=development
+      - ENVIRONMENT=development
       - MONGO_HOST=mongo
       - MONGO_PORT=27017
       - MONGO_DBNAME=retailarvadb
@@ -33,24 +33,24 @@ services:
       - USE_GOOGLE_EMBEDDING=False
       - USE_OLLAMA_EMBEDDING=True
       - OLLAMA_URL=http://172.21.174.131:11434
-      - OLLAMA_MODEL_ID='llama3.1:latest'
-      - OLLAMA_EMBEDDING_MODEL_ID='nomic-embed-text:latest'
+      - OLLAMA_MODEL_ID=llama3.1:latest
+      - OLLAMA_EMBEDDING_MODEL_ID=nomic-embed-text:latest
       - GEMINI_MODEL_ID=gemini-1.5-flash
       - GEMINI_EMBEDDING_MODEL_ID=llama3.1:latest
-      - GOOGLE_GENERATIVE_LANGUAGE_API_KEY="AIzaSyDpcYeeReEC_IdaiNRtMJLfqTJpX74ZtLI"
-      - GROQ_API_KEY="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"
-      - GROQ_MODEL_ID="llama-3.1-8b-instant"
-      - HUGGINGFACE_EMBEDDING_MODEL_ID="BAAI/bge-large-en-v1.5"
-      - QDRANT_API_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhY2Nlc3MiOiJtIn0.BqanaVupoaZV3GGVQGA5nOdGT3kHQDzOWJZC476Ruh0
+      - GOOGLE_GENERATIVE_LANGUAGE_API_KEY=AIzaSyDpcYeeReEC_IdaiNRtMJLfqTJpX74ZtLI
+      - GROQ_API_KEY=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
+      - GROQ_MODEL_ID=llama-3.1-8b-instant
+      - HUGGINGFACE_EMBEDDING_MODEL_ID=BAAI/bge-large-en-v1.5
+      - QDRANT_API_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJhY2Nlc3MiOiJtIn0.Z5PMRPegDxYyvVlCmkGmiLD0UuAj0WdrsqeXEMvJz_Q
       - QDRANT_CLUSTER_URL=https://27c6018a-d381-49b4-aef4-e922ce3eea85.us-west-2-0.aws.cloud.qdrant.io
-      - ELEVENLABS_API_KEY="sk_b0206ca0a7d97fa2b60ae41448b7f47e02872aec6d6cb65f"
-      - GOOGLE_APPLICATION_CREDENTIALS="C:\\Users\\dinit\\Documents\\Research\\Development\\test-playground\\retailarva-6169e9007515.json"
-      - GRADIO_URL="http://127.0.0.1:7860"
+      - ELEVENLABS_API_KEY=sk_b0206ca0a7d97fa2b60ae41448b7f47e02872aec6d6cb65f
+      - GOOGLE_APPLICATION_CREDENTIALS=C:\\Users\\dinit\\Documents\\Research\\Development\\test-playground\\retailarva-6169e9007515.json
+      - GRADIO_URL=http://127.0.0.1:7860
       - GRADIO_PORT=7860
 
-      - NGROK_AUTH_TOKEN="2pLD51lUVLQIOklGiSazGnQ7zLr_795mWrmQJAQ81AteoLCVT"
-      - NGROK_STATIC_DOMAIN="alert-evolved-chicken.ngrok-free.app"
-      - NGROK_API_KEY="2pLIqaJvCW1wiY5H1ZO6TUES8nt_73Jvh7frCqNjS6vVVVBKh"
+      - NGROK_AUTH_TOKEN=2pLD51lUVLQIOklGiSazGnQ7zLr_795mWrmQJAQ81AteoLCVT
+      - NGROK_STATIC_DOMAIN=alert-evolved-chicken.ngrok-free.app
+      - NGROK_API_KEY=2pLIqaJvCW1wiY5H1ZO6TUES8nt_73Jvh7frCqNjS6vVVVBKh
 
       - LANGSMITH_TRACING=true
       - LANGSMITH_ENDPOINT=https://api.smith.langchain.com
