--- a/docker-compose-w-ollama.yaml
+++ b/docker-compose-w-ollama.yaml
@@ -78,7 +78,7 @@ services:
       - NGROK_STATIC_DOMAIN=alert-evolved-chicken.ngrok-free.app
       - NGROK_API_KEY=2pLIqaJvCW1wiY5H1ZO6TUES8nt_73Jvh7frCqNjS6vVVVBKh
 
-      - LANGSMITH_TRACING=true
+      - LANGSMITH_TRACING='true'
       - LANGSMITH_ENDPOINT=https://api.smith.langchain.com
       - LANGSMITH_API_KEY=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
       - LANGSMITH_PROJECT=retailarva-chatbot
