updated tracing config/dataset preprocessing

--- a/docker-compose-w-ollama.yaml
+++ b/docker-compose-w-ollama.yaml
@@ -79,9 +79,9 @@ services:
       - NGROK_API_KEY=2pLIqaJvCW1wiY5H1ZO6TUES8nt_73Jvh7frCqNjS6vVVVBKh
 
       - LANGSMITH_TRACING='true'
-      - LANGSMITH_ENDPOINT=https://api.smith.langchain.com
-      - LANGSMITH_API_KEY=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
-      - LANGSMITH_PROJECT=retailarva-chatbot
+      - LANGSMITH_ENDPOINT='https://api.smith.langchain.com'
+      - LANGSMITH_API_KEY='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'
+      - LANGSMITH_PROJECT='retailARVA-""deployment'
     volumes:
       - retailarva-data:/app/src/data
     container_name: RetailARVA.Api
