--- a/docker-compose-w-ollama.yaml
+++ b/docker-compose-w-ollama.yaml
@@ -61,11 +61,11 @@ services:
       - OLLAMA_URL=http://ollama:11434
       - OLLAMA_MODEL_ID=llama3.1:latest
       - OLLAMA_EMBEDDING_MODEL_ID=nomic-embed-text:latest
-      - CLASSIFICATION_MODEL_ID=llama3.1:latest
+      - CLASSIFICATION_MODEL_ID=gemini-2.5-pro-preview-03-25
       - RECOMMENDATION_MODEL_ID=llama3.1:latest
-      - GEMINI_MODEL_ID=gemini-1.5-flash
+      - GEMINI_MODEL_ID=gemini-2.5-pro-preview-03-25
       - GEMINI_EMBEDDING_MODEL_ID=llama3.1:latest
-      - GOOGLE_GENERATIVE_LANGUAGE_API_KEY=AIzaSyDpcYeeReEC_IdaiNRtMJLfqTJpX74ZtLI
+      - GOOGLE_GENERATIVE_LANGUAGE_API_KEY=AIzaSyDhXLHoIJmyXVyzIwTOW8sQaqUYQT4Lno4
       - GROQ_API_KEY=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
       - GROQ_MODEL_ID=llama-3.1-8b-instant
       - HUGGINGFACE_EMBEDDING_MODEL_ID=BAAI/bge-large-en-v1.5
