--- a/docker-compose-w-ollama.yaml
+++ b/docker-compose-w-ollama.yaml
@@ -61,7 +61,7 @@ services:
       - OLLAMA_URL=http://ollama:11434
       - OLLAMA_MODEL_ID=llama3.1:latest
       - OLLAMA_EMBEDDING_MODEL_ID=nomic-embed-text:latest
-      - CLASSIFICATION_MODEL_ID=gemini-2.5-pro-preview-03-25
+      - CLASSIFICATION_MODEL_ID=gemini-2.5-pro-exp-03-25
       - RECOMMENDATION_MODEL_ID=llama3.1:latest
       - GEMINI_MODEL_ID=gemini-2.5-pro-preview-03-25
       - GEMINI_EMBEDDING_MODEL_ID=llama3.1:latest
