--- a/docker-compose-w-ollama.yaml
+++ b/docker-compose-w-ollama.yaml
@@ -62,6 +62,7 @@ services:
       - OLLAMA_MODEL_ID=llama3.1:latest
       - OLLAMA_EMBEDDING_MODEL_ID=nomic-embed-text:latest
       - CLASSIFICATION_MODEL_ID=gemini-2.5-pro-exp-03-25
+      - TTS_INPUT_PARSER_MODEL_ID=gemma3:4b-it-qat
       - RECOMMENDATION_MODEL_ID=llama3.1:latest
       - GEMINI_MODEL_ID=gemini-2.5-pro-preview-03-25
       - GEMINI_EMBEDDING_MODEL_ID=llama3.1:latest
