--- a/docker-compose.dev.yaml
+++ b/docker-compose.dev.yaml
@@ -36,6 +36,7 @@ services:
       - OLLAMA_MODEL_ID=llama3.1:latest
       - OLLAMA_EMBEDDING_MODEL_ID=nomic-embed-text:latest
       - CLASSIFICATION_MODEL_ID=deepseek-r1:1.5b
+      - TTS_INPUT_PARSER_MODEL_ID=gemma3:4b-it-qat
       - RECOMMENDATION_MODEL_ID=llama3.1:latest
       - GEMINI_MODEL_ID=gemini-1.5-flash
       - GEMINI_EMBEDDING_MODEL_ID=llama3.1:latest
