--- a/docker-compose-w-ollama.yaml
+++ b/docker-compose-w-ollama.yaml
@@ -59,11 +59,11 @@ services:
       - USE_GOOGLE_EMBEDDING=False
       - USE_OLLAMA_EMBEDDING=True
       - OLLAMA_URL=http://ollama:11434
-      - OLLAMA_MODEL_ID=llama3.1:latest
+      - OLLAMA_MODEL_ID=qwen2.5:14b
       - OLLAMA_EMBEDDING_MODEL_ID=nomic-embed-text:latest
       - CLASSIFICATION_MODEL_ID=gemini-2.5-pro-exp-03-25
       - TTS_INPUT_PARSER_MODEL_ID=gemma3:4b-it-qat
-      - RECOMMENDATION_MODEL_ID=llama3.1:latest
+      - RECOMMENDATION_MODEL_ID=qwen2.5:14b
       - GEMINI_MODEL_ID=gemini-2.5-pro-preview-03-25
       - GEMINI_EMBEDDING_MODEL_ID=llama3.1:latest
       - GOOGLE_GENERATIVE_LANGUAGE_API_KEY=AIzaSyDhXLHoIJmyXVyzIwTOW8sQaqUYQT4Lno4
